--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
-		"react-router-dom": "^6.3.0"
+		"react-router-dom": "^6.3.0",
+		"styled-components": "^5.3.10",
+		"typewriter-effect": "^2.19.0"
 	}
 }
