--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "prop-types": "^15.6.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-hook-form": "^7.43.9",
     "react-polyfills": "0.0.1",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.10",
