--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-hook-form": "^7.43.9",
     "react-polyfills": "0.0.1",
     "react-router-dom": "^6.3.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^5.3.10",
     "typewriter-effect": "^2.19.0"
   }
