--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "prop-types": "^15.6.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
